--- a/modelicaml/org.openmodelica.modelicaml.view.valuebindings/plugin.xml
+++ b/modelicaml/org.openmodelica.modelicaml.view.valuebindings/plugin.xml
@@ -2,8 +2,8 @@
 <?eclipse version="3.4"?>
 <plugin>
 	<extension
-       id="org.openmodelica.modelicaml.modelicamlMarker.actionCode.valueBindings"
-       name="ModelicaML Value Bindings Operations Validation"
+       id="org.openmodelica.modelicaml.marker.bindings"
+       name="ModelicaML Value Bindings Validation"
        point="org.eclipse.core.resources.markers">
       <super
             type="org.eclipse.emf.ecore.diagnostic">
