NEW: evaluation if code should be re-generated depending on last generation and last model modification

--- a/modelicaml/org.openmodelica.modelicaml.common/plugin.xml
+++ b/modelicaml/org.openmodelica.modelicaml.common/plugin.xml
@@ -33,5 +33,12 @@
             name="generatedBy">
       </attribute>
    </extension>
+   <extension
+         point="org.eclipse.papyrus.core.modelListener">
+      <listener
+            name="org.openmodelica.modelicaml.listeners.umlModelChanged"
+            realization="org.openmodelica.modelicaml.common.listeners.PapyrusListener">
+      </listener>
+   </extension>
 
 </plugin>
