--- a/modelicaml/org.openmodelica.modelicaml.common/plugin.xml
+++ b/modelicaml/org.openmodelica.modelicaml.common/plugin.xml
@@ -3,6 +3,7 @@
 <plugin>
    <extension
          id="org.openmodelica.modelicaml.marker.actionCode"
+         name="ModelicaML Action Code"
          point="org.eclipse.core.resources.markers">
       <super
             type="org.eclipse.emf.ecore.diagnostic">
@@ -19,6 +20,7 @@
    </extension>
    <extension
          id="org.openmodelica.modelicaml.marker.omc"
+         name="ModelicaML Simulation"
          point="org.eclipse.core.resources.markers">
       <super
             type="org.eclipse.emf.ecore.diagnostic">
