--- a/modelicaml/org.openmodelica.modelicaml.validation/plugin.xml
+++ b/modelicaml/org.openmodelica.modelicaml.validation/plugin.xml
@@ -750,7 +750,7 @@
    </extension>
    <extension
          id="org.openmodelica.modelicaml.marker.validation.problem"
-         name="ModelicaML Model Validation"
+         name="ModelicaML Validation"
          point="org.eclipse.core.resources.markers">
       <super
             type="org.eclipse.emf.ecore.diagnostic">
