--- a/modelicaml/org.openmodelica.modelicaml.view.componentstree/plugin.xml
+++ b/modelicaml/org.openmodelica.modelicaml.view.componentstree/plugin.xml
@@ -64,7 +64,7 @@
    </extension>
    <extension
          id="org.openmodelica.modelicaml.marker.actionCode.componentmodification"
-         name="ModelicaML Component Modifications Validation"
+         name="ModelicaML Component Modifications"
          point="org.eclipse.core.resources.markers">
       <super
             type="org.eclipse.emf.ecore.diagnostic">
