--- a/modelicaml/org.openmodelica.modelicaml.profile/plugin.xml
+++ b/modelicaml/org.openmodelica.modelicaml.profile/plugin.xml
@@ -260,6 +260,25 @@
                   visible="true">
             </separator>
             <command
+                  commandId="org.openmodelica.modelicaml.helper.commands.toolbar.automaticScenarioBasedVerification"
+                  icon="resources/icons/icons16/automaticScenarioBasedVerification.gif"
+                  label="Automatic Scenario-Based Verification"
+                  style="push"
+                  tooltip="Automatic Scenario-Based Verification">
+               <visibleWhen>
+                  <with
+                        variable="activeEditorId">
+                     <equals
+                           value="org.eclipse.papyrus.core.papyrusEditor">
+                     </equals>
+                  </with>
+               </visibleWhen>
+            </command>
+            <separator
+                  name="org.openmodelica.modelicaml.profile.separator2"
+                  visible="true">
+            </separator>
+            <command
                   commandId="org.openmodelica.modelicaml.helper.commands.toolbar.discoverScenToReqRelations"
                   icon="resources/icons/icons16/correlationset.gif"
                   label="Discover Relations Between Scenarios and Requirements"
@@ -275,7 +294,7 @@
                </visibleWhen>
             </command>
             <separator
-                  name="org.openmodelica.modelicaml.profile.separator2"
+                  name="org.openmodelica.modelicaml.profile.separator3"
                   visible="true">
             </separator>
             <command
