MOD: Enhancements for simulation setting, report generation.

--- a/modelicaml/org.openmodelica.modelicaml.preferences/plugin.xml
+++ b/modelicaml/org.openmodelica.modelicaml.preferences/plugin.xml
@@ -16,6 +16,12 @@
       </page>
       <page
             category="org.openmodelica.modelicaml.preferences.mainpage"
+            class="org.openmodelica.modelicaml.preferences.impl.ModelicaMLSimulationPage"
+            id="org.openmodelica.modelicaml.preferences.ModelicaMLPreferencePage"
+            name="ModelicaML Simulation Settings">
+      </page>
+      <page
+            category="org.openmodelica.modelicaml.preferences.mainpage"
             class="org.openmodelica.modelicaml.preferences.impl.ModelicaMLModelicaModelsSynchronization"
             id="org.openmodelica.modelicaml.preferences.ModelicaMLModelicaModelsSynchronization"
             name="ModelicaML Modelica Model Synchronization Settings">
