--- a/modelicaml/org.openmodelica.modelicaml.helper/build.properties
+++ b/modelicaml/org.openmodelica.modelicaml.helper/build.properties
@@ -4,4 +4,4 @@ bin.includes = META-INF/,\
                .,\
                plugin.xml,\
                icons/,\
-               sources/reportData/
+               sources/
