MOD: ModelicaML category moved to common plugin NEW: relations plugin for viewing any relations (Modelica extend, import, etc, and ModelicaML useToVerify, RequiredFor, etc.) and deleting invalid relations BUG FIX: code-generation "within" clause for package.mo

--- a/modelicaml/org.openmodelica.modelicaml.common/plugin.xml
+++ b/modelicaml/org.openmodelica.modelicaml.common/plugin.xml
@@ -42,5 +42,12 @@
             realization="org.openmodelica.modelicaml.common.listeners.PapyrusListener">
       </listener>
    </extension>
+   <extension
+         point="org.eclipse.ui.views">
+      <category
+            id="org.openmodelica.modelicaml.category"
+            name="ModelicaML">
+      </category>
+   </extension>
 
 </plugin>
