--- a/modelicaml/org.openmodelica.modelicaml.view.componentstree/plugin.xml
+++ b/modelicaml/org.openmodelica.modelicaml.view.componentstree/plugin.xml
@@ -5,7 +5,7 @@
    <extension
          point="org.eclipse.ui.views">
       <view
-            category="org.openmodelica.modelicaml.gen.modelica.category1"
+            category="org.openmodelica.modelicaml.category"
             class="org.openmodelica.modelicaml.view.componentstree.views.ComponentsTree"
             icon="icons/tree.png"
             id="org.openmodelica.modelicaml.view.componentstree"
